--- a/Website/css/landing-page.css
+++ b/Website/css/landing-page.css
@@ -124,3 +124,39 @@ footer.footer {
   padding-top: 4rem;
   padding-bottom: 4rem;
 }
+
+header.mastheadWorks {
+  position: relative;
+  background-color: #343a40;
+  background: url("../img/componentfpgamy.png") no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+}
+
+header.mastheadWorks .overlay {
+  position: absolute;
+  background-color: #212529;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0.3;
+}
+
+header.mastheadWorks h1 {
+  font-size: 2rem;
+}
+
+@media (min-width: 768px) {
+  header.mastheadWorks {
+    padding-top: 12rem;
+    padding-bottom: 12rem;
+  }
+  header.mastheadWorks h1 {
+    font-size: 3rem;
+  }
+}
