--- a/Website/css/landing-page.css
+++ b/Website/css/landing-page.css
@@ -128,7 +128,7 @@ footer.footer {
 header.mastheadWorks {
   position: relative;
   background-color: #343a40;
-  background: url("../img/componentfpgamy.png") no-repeat center center;
+  background: url("../img/componentfpgamyresized.png") no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
