--- a/Website/scss/_mastheadWorks.scss
+++ b/Website/scss/_mastheadWorks.scss
@@ -1,7 +1,7 @@
 header.masthead {
   position: relative;
   background-color: $gray-800;
-  background: url('../img/componentfpgamy.png') no-repeat center center;
+  background: url('../img/componentfpgamyresized.png') no-repeat center center;
   @include background-cover;
   padding-top: 8rem;
   padding-bottom: 8rem;
