--- a/Website/scss/_mastheadUsage.scss
+++ b/Website/scss/_mastheadUsage.scss
@@ -1,7 +1,7 @@
-header.mastheadWorks {
+header.mastheadUsage {
   position: relative;
   background-color: $gray-800;
-  background: url('../img/componentfpgamyresizedshifted2.png') no-repeat center center;
+  background: url('../img/bg-masthead-1.jpg') no-repeat center center;
   @include background-cover;
   padding-top: 8rem;
   padding-bottom: 8rem;
@@ -25,4 +25,3 @@ header.mastheadWorks {
     }
   }
 }
-componentfpgamyresizedshifted2
